[package]
name = "api"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", default-features = false, features = ["json"] }
tokio = { version = "*", optional = true, default-features = false, features = ["rt", "macros"] }
serde = { version = "*", default-features = false, features = ["derive"] }
serde_json = { version = "*", default-features = false }
lazy_static = "*"
regex = { version = "*", default-features = false }
url = "*"

[features]
async = ["tokio"]
blocking = ["reqwest/blocking"]
