[package]
name = "htu-net-login-daemon"
version = "0.1.2"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
api = { path = "../api", features = ["async"] }
hyper = { version = "*", default-features = false, features = ["server"] }
tokio = { version = "*", default-features = false, features = [
    "rt",
    "fs",
    "sync",
] }
serde = { version = "*", default-features = false, features = ["derive"] }
serde_json = { version = "*", default-features = false }
tokio-serde = { version = "*", default-features = false, features = ["json"] }
tokio-util = { version = "*", default-features = false, features = ["codec"] }
reqwest = { version = "*", default-features = false }
notify = { version = "*", optional = true }
notify-rust = { version = "*", optional = true }
dirs = "*"
lazy_static = "*"

[features]
default = ["auto-update", "sys-notify"]
sys-notify = ["notify-rust"]
auto-update = ["notify"]
