[package]
name = "tui"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", default-features = false, features = ["rt", "macros"] }
crossterm = { version = "*", default-features = false, features = ["events"] }
ratatui = { version = "*", default-features = false, features = ["crossterm"] }
reqwest = "*"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
lazy_static = "*"
